--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@ button:hover {
     </div>
 
     <p style="max-width:600px;margin:auto;font-size:18px;">
-        Bhutkiii 🌹  
-        I may act funny, I may irritate you sometimes…  
-        But today I officially give you this rose  
-        and my lifetime subscription of love 💕
+       Priyanka ❤️
+If I could, I would send you a garden every day…
+But today, accept this one rose and my whole heart with it.
     </p>
 
     <button onclick="surprise()">Click Here Bhutki 😜</button>
@@ -147,3 +146,4 @@ for(let i=0;i<30;i++){
 
 </body>
 </html>
+
