--- a/index.html
+++ b/index.html
@@ -5,145 +5,182 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Happy Rose Day Bhutki 🌹</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
 <style>
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #ff4e8a, #ff9a9e);
-    overflow: hidden;
-    color: white;
-    text-align: center;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
 
-/* Floating Hearts */
-.heart {
-    position: absolute;
-    bottom: -20px;
-    font-size: 20px;
-    animation: floatUp linear infinite;
+body{
+    height:100vh;
+    overflow:hidden;
+    font-family:'Poppins',sans-serif;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:white;
 }
 
-@keyframes floatUp {
-    to {
-        transform: translateY(-110vh);
-        opacity: 0;
-    }
+/* Full Screen Background */
+.background{
+    position:fixed;
+    width:100%;
+    height:100%;
+    background:url('photo1.jpg') center/cover no-repeat;
+    filter:blur(8px) brightness(0.6);
+    z-index:-2;
 }
 
-/* Main Container */
-.container {
-    position: relative;
-    z-index: 2;
-    padding: 30px;
+/* Overlay */
+.overlay{
+    position:fixed;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.4);
+    z-index:-1;
 }
 
-h1 {
-    font-size: 40px;
-    margin-top: 20px;
-    animation: glow 2s infinite alternate;
+/* Glass Card */
+.card{
+    backdrop-filter: blur(20px);
+    background: rgba(255,255,255,0.1);
+    border-radius:30px;
+    padding:50px;
+    width:90%;
+    max-width:700px;
+    text-align:center;
+    box-shadow:0 25px 60px rgba(0,0,0,0.5);
+    animation:fadeIn 2s ease;
 }
 
-@keyframes glow {
-    from { text-shadow: 0 0 10px #fff; }
-    to { text-shadow: 0 0 25px #ff0055; }
+@keyframes fadeIn{
+    from{opacity:0; transform:translateY(40px);}
+    to{opacity:1; transform:translateY(0);}
 }
 
-/* Photos */
-.photos {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin: 20px 0;
-    flex-wrap: wrap;
+h1{
+    font-family:'Dancing Script',cursive;
+    font-size:50px;
+    margin-bottom:15px;
 }
 
-.photos img {
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 5px solid white;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    transition: 0.4s;
+h2{
+    font-weight:300;
+    margin-bottom:30px;
 }
 
-.photos img:hover {
-    transform: scale(1.1) rotate(5deg);
+/* Couple Photos */
+.photos{
+    display:flex;
+    justify-content:center;
+    gap:30px;
+    margin-bottom:30px;
 }
 
-/* GIF Section */
-.gif-section img {
-    width: 220px;
-    margin-top: 20px;
-    border-radius: 20px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+.photos img{
+    width:160px;
+    height:160px;
+    object-fit:cover;
+    border-radius:20px;
+    box-shadow:0 15px 40px rgba(0,0,0,0.6);
+    transition:0.4s;
+}
+
+.photos img:hover{
+    transform:scale(1.1);
+}
+
+/* Message */
+.message{
+    font-size:18px;
+    line-height:1.7;
+    margin-bottom:30px;
 }
 
 /* Button */
-button {
-    background: white;
-    color: #ff0066;
-    border: none;
-    padding: 12px 30px;
-    font-size: 18px;
-    border-radius: 30px;
-    cursor: pointer;
-    margin-top: 25px;
-    transition: 0.3s;
+button{
+    padding:14px 35px;
+    border:none;
+    border-radius:40px;
+    font-size:18px;
+    cursor:pointer;
+    background:white;
+    color:#ff4e50;
+    font-weight:600;
+    transition:0.3s;
 }
 
-button:hover {
-    background: #ff0066;
-    color: white;
-    transform: scale(1.1);
+button:hover{
+    transform:scale(1.1);
+    background:#ff4e50;
+    color:white;
+}
+
+/* Rose Animation */
+.petal{
+    position:absolute;
+    top:-50px;
+    font-size:20px;
+    animation:fall linear infinite;
+}
+
+@keyframes fall{
+    to{
+        transform:translateY(110vh) rotate(360deg);
+        opacity:0;
+    }
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<div class="background"></div>
+<div class="overlay"></div>
 
-    <h1>Happy Rose Day Priyanka 🌹</h1>
-    <h2>My Cute Bhutki ❤️</h2>
+<audio autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<div class="card">
+    <h1>Happy Rose Day 🌹</h1>
+    <h2>My Beautiful Priyanka (Bhutki) ❤️</h2>
 
     <div class="photos">
-        <img src="photo1.jpg" alt="Mine">
+        <img src="photo1.jpg" alt="Me">
         <img src="photo2.jpg" alt="Her">
     </div>
 
-    <div class="gif-section">
-        <img src="rose.gif" alt="Giving Rose">
+    <div class="message">
+        Bhutki 🌹<br><br>
+        If love had a face, it would look like you.  
+        If happiness had a name, it would be Priyanka.  
+        Today I give you this rose,  
+        but honestly… you are the most beautiful flower in my life. ❤️
     </div>
 
-    <p style="max-width:600px;margin:auto;font-size:18px;">
-       Priyanka ❤️
-If I could, I would send you a garden every day…
-But today, accept this one rose and my whole heart with it.
-    </p>
-
-    <button onclick="surprise()">Click Here Bhutki 😜</button>
-
+    <button onclick="showLove()">Forever Mine 💌</button>
 </div>
 
 <script>
-function surprise(){
-    alert("Priyanka ❤️ You are my favorite person, my daily happiness and my forever rose. Happy Rose Day Bhutki 🌹😘");
+function showLove(){
+    alert("Priyanka ❤️ No matter where life takes us, my heart will always choose you. Happy Rose Day Bhutki 🌹😘");
 }
 
-/* Floating Hearts Generator */
-for(let i=0;i<30;i++){
-    let heart = document.createElement("div");
-    heart.classList.add("heart");
-    heart.innerHTML="💖";
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.animationDuration=(4+Math.random()*6)+"s";
-    heart.style.fontSize=(15+Math.random()*20)+"px";
-    document.body.appendChild(heart);
+/* Generate Falling Roses */
+for(let i=0;i<35;i++){
+    let petal=document.createElement("div");
+    petal.classList.add("petal");
+    petal.innerHTML="🌹";
+    petal.style.left=Math.random()*100+"vw";
+    petal.style.animationDuration=(6+Math.random()*5)+"s";
+    petal.style.fontSize=(15+Math.random()*20)+"px";
+    document.body.appendChild(petal);
 }
 </script>
 
 </body>
 </html>
-
