--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ button:hover{
         but honestly… you are the most beautiful flower in my life. ❤️
     </div>
 
-    <button onclick="showLove()">Forever Mine 💌</button>
+    <button onclick="showLove()">Click this 💌</button>
 </div>
 
 <script>
@@ -184,3 +184,4 @@ for(let i=0;i<35;i++){
 
 </body>
 </html>
+
