--- a/index.html
+++ b/index.html
@@ -24,26 +24,31 @@ body{
     color:white;
 }
 
-/* Full Screen Background */
+/* Background */
 .background{
     position:fixed;
     width:100%;
     height:100%;
     background:url('photo1.jpg') center/cover no-repeat;
-    filter:blur(8px) brightness(0.6);
+    filter:blur(10px) brightness(0.6);
     z-index:-2;
+    animation:zoomBg 20s infinite alternate ease-in-out;
 }
 
-/* Overlay */
+@keyframes zoomBg{
+    from{transform:scale(1);}
+    to{transform:scale(1.1);}
+}
+
 .overlay{
     position:fixed;
     width:100%;
     height:100%;
-    background:rgba(0,0,0,0.4);
+    background:rgba(0,0,0,0.5);
     z-index:-1;
 }
 
-/* Glass Card */
+/* Card */
 .card{
     backdrop-filter: blur(20px);
     background: rgba(255,255,255,0.1);
@@ -63,21 +68,21 @@ body{
 
 h1{
     font-family:'Dancing Script',cursive;
-    font-size:50px;
-    margin-bottom:15px;
+    font-size:48px;
+    margin-bottom:10px;
 }
 
 h2{
     font-weight:300;
-    margin-bottom:30px;
+    margin-bottom:25px;
 }
 
-/* Couple Photos */
 .photos{
     display:flex;
     justify-content:center;
     gap:30px;
-    margin-bottom:30px;
+    margin-bottom:25px;
+    flex-wrap:wrap;
 }
 
 .photos img{
@@ -93,14 +98,12 @@ h2{
     transform:scale(1.1);
 }
 
-/* Message */
 .message{
     font-size:18px;
     line-height:1.7;
     margin-bottom:30px;
 }
 
-/* Button */
 button{
     padding:14px 35px;
     border:none;
@@ -119,7 +122,7 @@ button:hover{
     color:white;
 }
 
-/* Rose Animation */
+/* Falling Roses */
 .petal{
     position:absolute;
     top:-50px;
@@ -133,6 +136,40 @@ button:hover{
         opacity:0;
     }
 }
+
+/* Love Reveal Screen */
+.loveScreen{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.9);
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    padding:30px;
+    opacity:0;
+    visibility:hidden;
+    transition:1.5s;
+    z-index:9999;
+}
+
+.loveScreen.active{
+    opacity:1;
+    visibility:visible;
+}
+
+.loveContent{
+    max-width:700px;
+    animation:fadeZoom 2s ease;
+}
+
+@keyframes fadeZoom{
+    from{opacity:0; transform:scale(0.8);}
+    to{opacity:1; transform:scale(1);}
+}
 </style>
 </head>
 
@@ -141,7 +178,7 @@ button:hover{
 <div class="background"></div>
 <div class="overlay"></div>
 
-<audio autoplay loop>
+<audio id="bgMusic" loop>
     <source src="music.mp3" type="audio/mpeg">
 </audio>
 
@@ -156,33 +193,33 @@ button:hover{
 
     <div class="message">
         Bhutki 🌹<br><br>
-        If love had a face, it would look like you.  
-        If happiness had a name, it would be Priyanka.  
-        Today I give you this rose,  
-        but honestly… you are the most beautiful flower in my life. ❤️
+        This rose is just a flower…  
+        but what I feel for you grows every single day.  
+        You are my happiness, my peace,  
+        and the best part of my life. ❤️
     </div>
 
-    <button onclick="showLove()">Click this 💌</button>
+    <button onclick="revealLove()">Click Here Bhutki 💖</button>
+</div>
+
+<div class="loveScreen" id="loveScreen">
+    <div class="loveContent">
+        <h1 style="font-family:'Dancing Script',cursive;font-size:55px;">
+            Priyanka ❤️
+        </h1>
+        <p style="font-size:20px;line-height:1.8;margin-top:20px;">
+            I don't promise a perfect life...  
+            but I promise to stand beside you  
+            in every imperfect moment. 🌹  
+            <br><br>
+            You are not just my Rose Day,  
+            you are my always.
+        </p>
+    </div>
 </div>
 
 <script>
-function showLove(){
-    alert("Priyanka ❤️ No matter where life takes us, my heart will always choose you. Happy Rose Day Bhutki 🌹😘");
-}
+const music = document.getElementById("bgMusic");
 
-/* Generate Falling Roses */
-for(let i=0;i<35;i++){
-    let petal=document.createElement("div");
-    petal.classList.add("petal");
-    petal.innerHTML="🌹";
-    petal.style.left=Math.random()*100+"vw";
-    petal.style.animationDuration=(6+Math.random()*5)+"s";
-    petal.style.fontSize=(15+Math.random()*20)+"px";
-    document.body.appendChild(petal);
-}
-</script>
-
-</body>
-</html>
-
-
+// Start music on first click anywhere
+document.addEventListener("click", function () {
