--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 }
 
 body{
-    height:100vh;
-    overflow:hidden;
+    min-height:100vh;
     font-family:'Poppins',sans-serif;
     display:flex;
     justify-content:center;
     align-items:center;
     color:white;
+    overflow-x:hidden;
 }
 
 /* Background */
@@ -30,7 +30,7 @@ body{
     width:100%;
     height:100%;
     background:url('photo1.jpg') center/cover no-repeat;
-    filter:blur(10px) brightness(0.6);
+    filter:blur(8px) brightness(0.6);
     z-index:-2;
     animation:zoomBg 20s infinite alternate ease-in-out;
 }
@@ -52,12 +52,12 @@ body{
 .card{
     backdrop-filter: blur(20px);
     background: rgba(255,255,255,0.1);
-    border-radius:30px;
-    padding:50px;
+    border-radius:25px;
+    padding:40px;
     width:90%;
     max-width:700px;
     text-align:center;
-    box-shadow:0 25px 60px rgba(0,0,0,0.5);
+    box-shadow:0 20px 50px rgba(0,0,0,0.5);
     animation:fadeIn 2s ease;
 }
 
@@ -68,158 +68,19 @@ body{
 
 h1{
     font-family:'Dancing Script',cursive;
-    font-size:48px;
+    font-size:clamp(32px, 6vw, 50px);
     margin-bottom:10px;
 }
 
 h2{
     font-weight:300;
-    margin-bottom:25px;
+    margin-bottom:20px;
+    font-size:clamp(16px, 3vw, 22px);
 }
 
 .photos{
     display:flex;
     justify-content:center;
-    gap:30px;
-    margin-bottom:25px;
-    flex-wrap:wrap;
-}
-
-.photos img{
-    width:160px;
-    height:160px;
-    object-fit:cover;
-    border-radius:20px;
-    box-shadow:0 15px 40px rgba(0,0,0,0.6);
-    transition:0.4s;
-}
-
-.photos img:hover{
-    transform:scale(1.1);
-}
-
-.message{
-    font-size:18px;
-    line-height:1.7;
-    margin-bottom:30px;
-}
-
-button{
-    padding:14px 35px;
-    border:none;
-    border-radius:40px;
-    font-size:18px;
-    cursor:pointer;
-    background:white;
-    color:#ff4e50;
-    font-weight:600;
-    transition:0.3s;
-}
-
-button:hover{
-    transform:scale(1.1);
-    background:#ff4e50;
-    color:white;
-}
-
-/* Falling Roses */
-.petal{
-    position:absolute;
-    top:-50px;
-    font-size:20px;
-    animation:fall linear infinite;
-}
-
-@keyframes fall{
-    to{
-        transform:translateY(110vh) rotate(360deg);
-        opacity:0;
-    }
-}
-
-/* Love Reveal Screen */
-.loveScreen{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:rgba(0,0,0,0.9);
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    text-align:center;
-    padding:30px;
-    opacity:0;
-    visibility:hidden;
-    transition:1.5s;
-    z-index:9999;
-}
-
-.loveScreen.active{
-    opacity:1;
-    visibility:visible;
-}
-
-.loveContent{
-    max-width:700px;
-    animation:fadeZoom 2s ease;
-}
-
-@keyframes fadeZoom{
-    from{opacity:0; transform:scale(0.8);}
-    to{opacity:1; transform:scale(1);}
-}
-</style>
-</head>
-
-<body>
-
-<div class="background"></div>
-<div class="overlay"></div>
-
-<audio id="bgMusic" loop>
-    <source src="music.mp3" type="audio/mpeg">
-</audio>
-
-<div class="card">
-    <h1>Happy Rose Day 🌹</h1>
-    <h2>My Beautiful Priyanka (Bhutki) ❤️</h2>
-
-    <div class="photos">
-        <img src="photo2.jpg" alt="Me">
-        <img src="photo1.jpg" alt="Her">
-    </div>
-
-    <div class="message">
-        Bhutki 🌹<br><br>
-        This rose is just a flower…  
-        but what I feel for you grows every single day.  
-        You are my happiness, my peace,  
-        and the best part of my life. ❤️
-    </div>
-
-    <button onclick="revealLove()">Click Here Bhutki 💖</button>
-</div>
-
-<div class="loveScreen" id="loveScreen">
-    <div class="loveContent">
-        <h1 style="font-family:'Dancing Script',cursive;font-size:55px;">
-            Priyanka ❤️
-        </h1>
-        <p style="font-size:20px;line-height:1.8;margin-top:20px;">
-            I don't promise a perfect life...  
-            but I promise to stand beside you  
-            in every imperfect moment. 🌹  
-            <br><br>
-            You are not just my Rose Day,  
-            you are my always.
-        </p>
-    </div>
-</div>
-
-<script>
-const music = document.getElementById("bgMusic");
-
-// Start music on first click anywhere
-document.addEventListener("click", function () {
+    gap:25px;
+    margin-bottom:20px;
+    flex-wrap:wr
