--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Rose Day Priyanka -Nitin 🌹</title>
+<title>Happy Rose Day Bhutki 🌹</title>
 
 <style>
 *{
@@ -18,22 +18,25 @@ min-height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
-background: url('photo1.jpg') center/cover no-repeat;
-color:white;
 text-align:center;
+color:white;
 overflow:hidden;
+background:url("photo1.jpg") center/cover no-repeat fixed;
 }
 
-.overlay{
+/* Dark overlay */
+body::before{
+content:"";
 position:fixed;
 top:0;
 left:0;
 width:100%;
 height:100%;
-background:rgba(0,0,0,0.6);
+background:rgba(0,0,0,0.65);
 z-index:-1;
 }
 
+/* Card */
 .card{
 background:rgba(255,255,255,0.1);
 padding:30px;
@@ -41,6 +44,7 @@ border-radius:20px;
 width:90%;
 max-width:600px;
 backdrop-filter: blur(10px);
+box-shadow:0 15px 40px rgba(0,0,0,0.6);
 }
 
 h1{
@@ -66,6 +70,17 @@ width:120px;
 height:120px;
 border-radius:15px;
 object-fit:cover;
+box-shadow:0 10px 25px rgba(0,0,0,0.7);
+transition:0.3s;
+}
+
+.photos img:hover{
+transform:scale(1.05);
+}
+
+p{
+margin-bottom:20px;
+font-size:16px;
 }
 
 button{
@@ -76,13 +91,22 @@ background:white;
 color:#ff4e50;
 font-weight:bold;
 cursor:pointer;
+transition:0.3s;
 }
 
+button:hover{
+background:#ff4e50;
+color:white;
+transform:scale(1.05);
+}
+
+/* Falling roses */
 .petal{
 position:absolute;
 top:-50px;
 font-size:20px;
 animation:fall linear infinite;
+pointer-events:none;
 }
 
 @keyframes fall{
@@ -92,18 +116,23 @@ opacity:0;
 }
 }
 
+/* Responsive */
 @media(max-width:480px){
 .photos img{
 width:100px;
 height:100px;
+}
+h1{
+font-size:22px;
+}
+h2{
+font-size:18px;
 }
 }
 </style>
 </head>
 
 <body>
-
-<div class="overlay"></div>
 
 <audio id="bgMusic" loop>
 <source src="music.mp3" type="audio/mpeg">
@@ -114,32 +143,48 @@ height:100px;
 <h2>My Priyanka (Bhutki) ❤️</h2>
 
 <div class="photos">
-<img src="photo1.jpg">
-<img src="photo2.jpg">
+<img src="photo1.jpg" alt="Me">
+<img src="photo2.jpg" alt="Her">
 </div>
 
-<p>You are my favorite person and my forever smile ❤️</p>
-<br>
-<button onclick="startLove()">Tap Here Bhutki 💖</button>
+<p>
+Bhutki ❤️<br>
+You are my peace, my happiness,  
+and my favorite notification every day.
+</p>
+
+<button onclick="showLove()">Tap Here Bhutki 💖</button>
 </div>
 
 <script>
+// Wait until page fully loads
+window.onload = function(){
+
+// MUSIC START ON FIRST CLICK
 const music = document.getElementById("bgMusic");
 
-document.addEventListener("click", function(){
-music.play();
+document.body.addEventListener("click", function(){
+music.play().catch(()=>{});
 }, { once:true });
 
-function startLove(){
-alert("You are my always ❤️🌹");
-}
+// BUTTON FUNCTION
+window.showLove = function(){
+alert("You are my forever 🌹❤️");
+};
 
-for(let i=0;i<25;i++){
+// ROSE ANIMATION
+for(let i=0;i<30;i++){
 let petal=document.createElement("div");
 petal.className="petal";
 petal.innerHTML="🌹";
 petal.style.left=Math.random()*100+"vw";
 petal.style.animationDuration=(5+Math.random()*5)+"s";
+petal.style.fontSize=(15+Math.random()*20)+"px";
 document.body.appendChild(petal);
 }
-</s
+
+};
+</script>
+
+</body>
+</html>
