--- a/index.html
+++ b/index.html
@@ -1,82 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Happy Rose Day Bhutki 🌹</title>
 
 <style>
-*{
-margin:0;
-padding:0;
-box-sizing:border-box;
-}
-
 body{
+margin:0;
 font-family: Arial, sans-serif;
+background:url("photo1.jpg") center/cover no-repeat;
 min-height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
-text-align:center;
 color:white;
-overflow:hidden;
-background:url("photo1.jpg") center/cover no-repeat fixed;
 }
 
-/* Dark overlay */
-body::before{
-content:"";
+/* Dark layer */
+.overlay{
 position:fixed;
 top:0;
 left:0;
 width:100%;
 height:100%;
-background:rgba(0,0,0,0.7);
-z-index:-1;
+background:rgba(0,0,0,0.6);
+z-index:1;
 }
 
-/* Main Card */
+/* Card */
 .card{
-background:rgba(255,255,255,0.1);
+position:relative;
+z-index:2;
+background:rgba(0,0,0,0.6);
 padding:30px;
-border-radius:20px;
+border-radius:15px;
+text-align:center;
 width:90%;
-max-width:600px;
-backdrop-filter: blur(10px);
-box-shadow:0 15px 40px rgba(0,0,0,0.6);
+max-width:500px;
 }
 
 h1{
-font-size:28px;
 margin-bottom:10px;
-}
-
-h2{
-font-size:20px;
-margin-bottom:20px;
 }
 
 .photos{
 display:flex;
 justify-content:center;
-gap:20px;
+gap:15px;
 flex-wrap:wrap;
-margin-bottom:20px;
+margin:15px 0;
 }
 
 .photos img{
 width:120px;
 height:120px;
-border-radius:15px;
+border-radius:10px;
 object-fit:cover;
-box-shadow:0 10px 25px rgba(0,0,0,0.7);
-transition:0.3s;
 }
 
-.photos img:hover{
-transform:scale(1.05);
+button{
+padding:10px 20px;
+border:none;
+border-radius:20px;
+background:white;
+color:#ff4e50;
+font-weight:bold;
+cursor:pointer;
 }
 
-p{
-margin-bo
+.loveMessage{
+display:none;
+margin-top:20px;
+font-size:18px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="overlay"></div>
+
+<audio id="bgMusic" loop>
+<source src="music.mp3" ty
