--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <style>
 body{
 margin:0;
-font-family: Arial, sans-serif;
+font-family: 'Segoe UI', sans-serif;
 background:url("photo1.jpg") center/cover no-repeat;
 min-height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
 color:white;
+overflow:hidden;
 }
 
 .overlay{
@@ -23,19 +24,38 @@ top:0;
 left:0;
 width:100%;
 height:100%;
-background:rgba(0,0,0,0.6);
+background:rgba(0,0,0,0.65);
 z-index:1;
 }
 
 .card{
 position:relative;
 z-index:2;
-background:rgba(0,0,0,0.7);
+background:rgba(0,0,0,0.75);
 padding:30px;
-border-radius:15px;
+border-radius:20px;
 text-align:center;
 width:90%;
 max-width:500px;
+backdrop-filter: blur(10px);
+animation: fadeIn 1.5s ease-in-out;
+}
+
+h1{
+margin-bottom:5px;
+color:#ff9bb3;
+}
+
+h2{
+margin-top:0;
+font-weight:normal;
+color:#ffd6e0;
+}
+
+.introText{
+font-size:16px;
+margin-top:15px;
+line-height:1.6;
 }
 
 .photos{
@@ -49,24 +69,44 @@ margin:20px 0;
 .photos img{
 width:120px;
 height:120px;
-border-radius:10px;
+border-radius:15px;
 object-fit:cover;
+border:2px solid #ff9bb3;
+transition:0.3s;
+}
+
+.photos img:hover{
+transform:scale(1.05);
 }
 
 button{
-padding:10px 20px;
+padding:12px 25px;
 border:none;
-border-radius:20px;
-background:white;
-color:#ff4e50;
+border-radius:30px;
+background:linear-gradient(45deg,#ff4e50,#ff9bb3);
+color:white;
 font-weight:bold;
 cursor:pointer;
+font-size:15px;
+transition:0.3s;
+}
+
+button:hover{
+transform:scale(1.1);
 }
 
 .loveMessage{
 display:none;
-margin-top:20px;
-font-size:18px;
+margin-top:25px;
+font-size:17px;
+line-height:1.7;
+animation: fadeIn 1.5s ease-in-out;
+color:#ffe4ec;
+}
+
+@keyframes fadeIn{
+from{opacity:0; transform:translateY(20px);}
+to{opacity:1; transform:translateY(0);}
 }
 </style>
 </head>
@@ -76,19 +116,41 @@ font-size:18px;
 <div class="overlay"></div>
 
 <div class="card">
+
 <h1>Happy Rose Day 🌹</h1>
-<h2>My Priyanka (Bhutki) ❤️</h2>
+<h2>My Beautiful Priyanka (Bhutki) ❤️</h2>
+
+<div class="introText">
+From the moment you came into my life,  
+everything became brighter, softer and happier.  
+You are not just my girlfriend…  
+you are my peace, my smile, and my favorite notification 😌💕
+</div>
 
 <div class="photos">
 <img src="photo1.jpg">
 <img src="photo2.jpg">
 </div>
 
-<button onclick="showLove()">Open Your Surprise 💖</button>
+<button onclick="showLove()">Click Here Bhutki 💖</button>
 
 <div class="loveMessage" id="loveMessage">
-You are my today, tomorrow and forever ❤️🌹
+🌹 On this Rose Day 🌹 <br><br>
+I give you this rose with all my heart...  
+and along with it, my promise —  
+
+To irritate you forever,  
+To protect you always,  
+To support your dreams,  
+And to love you more every single day ❤️  
+
+You are my today.  
+You are my tomorrow.  
+And you are my forever, Bhutki 💕  
+
+Happy Rose Day, My Love 🌹✨
 </div>
+
 </div>
 
 <script>
